# mcp-windbg

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  server.json
.claude/rules/: documentation.md  markdown.md
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/prompts/: dump-triage.prompt.md
.github/workflows/: build-and-test.yml  ci.yml  pages.yml  publish-mcp-registry.yml  publish-mcp.yml  test-publish.yml
docs/: development.md  getting-started.md  index.md  troubleshooting.md
docs/assets/: extra.css  mermaid.js
docs/reference/: cli.md  clients.md  index.md  prompts.md  tools.md
docs/scenarios/: crash-dump.md  http-service.md  index.md  kernel-debugging.md  redaction.md  remote-debugging.md  triage.md
scripts/: Format-Docs.ps1  check-version-consistency.ps1  validate-server-schema.py
src/mcp_server_windbg/: __init__.py  __main__.py  cdb_session.py  server.py
src/mcp_server_windbg/tests/: test_cdb.py  test_remote_debugging.py
src/mcp_windbg/: __init__.py  cdb_session.py  debug_session.py  filter_script.py  kd_session.py  server.py
src/mcp_windbg/prompts/: __init__.py  dump-triage.prompt.md  kernel-triage.prompt.md  remote-triage.prompt.md
src/mcp_windbg/tests/: conftest.py  test_build_cdb_args.py  test_cdb.py  test_cli.py  test_debug_session.py  test_filter_script.py  test_kd_session.py  test_remote_debugging.py  test_scenarios.py  test_server_sessions.py
src/mcp_windbg/tests/e2e/: README.md  __init__.py  harness.py  manual-verification.md  runner.py
src/mcp_windbg/tests/scenarios/: analyze_dump.yaml  custom_cdb_path.yaml  empty_dump_path.yaml  filter_bad_return.yaml  filter_error.yaml  filter_invalid.yaml  filter_missing.yaml  filter_not_callable.yaml  filter_passthrough.yaml  filter_redact_io.yaml  filter_redaction.yaml  filter_variants.yaml  filter_zero_arg.yaml  http_transport.yaml  kernel_session.yaml  list_dumps.yaml  no_dump_dir_symbols.yaml  nonexistent_dump.yaml  prompt_dump_triage.yaml  prompts.yaml  remote_debugging.yaml  remote_invalid.yaml  run_command.yaml  send_ctrl_break.yaml  session_lifecycle.yaml  symbols_combine.yaml  symbols_reuse.yaml  tools_contract.yaml  validation_errors.yaml
src/mcp_windbg/tests/scenarios/filters/: bad_return.py  broken.py  input_only.py  not_callable.py  passthrough.py  raising.py  redact.py  uppercase.py  zero_arg.py
