[project]
name = "mcp-windbg"
version = "0.12.2"
description = "A Model Context Protocol server providing tools to analyze Windows crash dumps using WinDbg/CDB"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "svnscha" }]
keywords = ["windbg", "cdb", "mcp", "llm", "crash-analysis"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.17.0",
    "pydantic>=2.12.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-windbg = "mcp_windbg:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mcp_windbg = ["prompts/*.prompt.md"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "twine>=6.2.0",
    "jsonschema>=4.23.0",
]

[tool.pytest.ini_options]
testpaths = ["src/mcp_windbg/tests"]

[project.optional-dependencies]
test = ["pytest>=8.4.0"]
